# prompt-lock

./: .gitignore  .golangci.yml  Dockerfile  LICENSE  README.md  cloudbuild.yaml  config.go  deploy.sh  docker-compose.yml  go.mod  pipeline.go  promptlock.go  promptlock_test.go  result.go
.github/workflows/: ci.yml  deploy.yml  publish-npm.yml  publish-pypi.yml  publish.yml
cmd/promptlock-server/: main.go
delimiter/: delimiter.go  delimiter_test.go
detector/: corpus.go  detector.go  detector_test.go  embedder_ollama.go  pattern.go  vector.go  vector_test.go
examples/basic/: main.go
examples/client-curl/: test.sh
examples/client-node/: client.js
examples/client-python/: client.py
examples/middleware/: main.go
examples/vector/: main.go
interceptor/: interceptor.go  interceptor_test.go  providers.go
internal/randutil/: rand.go  rand_test.go
judge/: judge.go  judge_test.go  llm.go
proto/promptlock/v1/: promptlock.proto
registry/: embedded.go  loader.go  registry.go  registry_test.go
sanitizer/: decoder.go  invisible.go  sanitizer.go  sanitizer_test.go  unicode.go
sdks/python/: pyproject.toml
sdks/python/promptlock/: __init__.py  shield.py
sdks/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: corpus.json  index.ts  patterns.json
server/: grpc.go  http.go  http_test.go  server.go
vault/: patterns.go  redactor.go  vault.go  vault_test.go
