[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptlock"
version = "1.0.0"
description = "Anti-prompt injection SDK for LLM applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.23"]
