[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptlock-py"
version = "1.0.0"
description = "Anti-prompt injection SDK for LLM applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

license = {text = "MIT"}
keywords = ["prompt-injection", "llm", "security", "ai-safety", "promptlock"]

[project.urls]
Homepage = "https://cawght.com/shield"
Repository = "https://github.com/hatchedland/prompt-lock"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.package-data]
promptlock = ["patterns.json"]
